# ResearchGroupTools 0.4-0

# Development version

* Added jplot()

* Added lags()

# Version 0.4-0

* Added completeLowResolutionData()

* Added last_non_NA()

* Added cumskewness(), cumkurtosis(), cumsd(), etc.

# Version 0.3-0

* Added testSpecification() to check VAR models

* New routine standardizeCoefficients() for lm and vars

* Hooks to output to eliminate output of "-0.00"

* Added new functions for regression output as LaTeX with t-values

* Added routines adf(), cointegrationTable(), plotIrf(), impulseResponsePlot()

* Added new helpers for plotting: allDigitslabels()

# Version 0.2-0

* Added new functions for string manipulating

* Added new functions for econometrics