@@ -44,6 +44,7 @@ export(showCoeftest)
 export(showColsNA)
 export(showRowsNA)
 export(standardizeCoefficients)
+export(testDiagnostics)
 export(testSpecification)
 export(texreg_tvalues)
 exportMethods(extract)
